[Wokism] Edit wrong font-weight: 600 to correct value -> 700

--- a/styles/__global.css
+++ b/styles/__global.css
@@ -22,7 +22,7 @@
 @font-face {
     font-family: 'gt-walsheim';
     font-style: normal;
-    font-weight: 600;
+    font-weight: 700;
     src: url(./fonts/gt-walsheim/gt-walsheim-bold-subset.woff2) format('woff2');
 }
 
